<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/edit_chart_button"
        android:icon="@drawable/iconpack_edit"
        android:onClick="onClickEditButton"
        android:showAsAction="ifRoom|withText"
        android:title="@string/edit">
    </item>
    <item
        android:id="@+id/share_chart_button"
        android:icon="@drawable/iconpack_share"
        android:onClick="onClickShareButton"
        android:showAsAction="ifRoom|withText"
        android:title="@string/share">
    </item>
     <item
        android:id="@+id/refresh_chart_button"
        android:icon="@drawable/navigation_refresh"
        android:onClick="onClickRefreshButton"
        android:showAsAction="ifRoom|withText"
        android:title="@string/refresh">
    </item>

</menu>