<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chart"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_blue"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/white_drop_shadow_panel_cropped"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/chartName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/editChartInitTitle"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!--
            <ToggleButton
                android:id="@+id/raw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Raw"
                android:textOff="Raw" />
            -->

            <ToggleButton
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/line_chart_32x32x32"
                android:onClick="changeType"
                android:text="@string/line"
                android:textOff="Line"
                android:textOn="Line" />

            <ToggleButton
                android:id="@+id/bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/bar_chart_32x32x32"
                android:onClick="changeType"
                android:textOff="Bar"
                android:textOn="Bar" />

            <ToggleButton
                android:id="@+id/pie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/pie_chart_32x32x32"
                android:onClick="changeType"
                android:textOff="Pie"
                android:textOn="Pie" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/metricsList"
                style="@style/CJSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/metrics" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:gravity="right"
                        android:paddingBottom="10dip"
                        android:paddingRight="10dip"
                        android:paddingTop="10dip"
                        android:text="@string/from"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Button
                        android:id="@+id/fromDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                       
                        android:clickable="true"
                        android:onClick="setToFromDate"
                        style="@style/CJDateButton"
                        android:text="@string/sampleDate"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:gravity="right"
                        android:paddingBottom="10dip"
                        android:paddingRight="10dip"
                        android:paddingTop="10dip"
                        android:text="@string/to"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Button
                        android:id="@+id/toDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        style="@style/CJDateButton"
                        android:onClick="setToFromDate"
                        android:text="@string/sampleDate"
                   />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>
            </TableLayout>

            <Spinner
                android:id="@+id/intervalList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dropdown" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>